--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,11 +78,11 @@
         android:id="@+id/skip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center|end"
         android:padding="20sp"
         android:layout_below="@+id/ll_view"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:layout_centerInParent="true"
-        android:text="@string/skip" />
+        android:text="Skip Login >>" />
 
 </RelativeLayout>
