--- a/app/src/main/res/layout/ad_unified.xml
+++ b/app/src/main/res/layout/ad_unified.xml
@@ -1,11 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:orientation="vertical"
-    card_view:cardCornerRadius="@dimen/cardview_default_radius"
-    card_view:cardElevation="@dimen/cardview_default_elevation">
+    android:layout_margin="16dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="3dp">
 
     <com.google.android.gms.ads.formats.UnifiedNativeAdView
         android:id="@+id/ad_view"
@@ -25,20 +25,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:textColor="#FFFFFF"
-                android:textSize="12sp"
-                android:text="Ad"
-                android:background="#FFCC66"
                 android:width="15dp"
-                android:height="15dp"/>
+                android:height="15dp"
+                android:background="#FFCC66"
+                android:text="Ad"
+                android:textColor="#FFFFFF"
+                android:textSize="12sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="3dp">
+                android:paddingTop="3dp"
+                android:paddingRight="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -50,9 +50,9 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:adjustViewBounds="true"
-                        android:paddingBottom="5dp"
+                        android:paddingEnd="5dp"
                         android:paddingRight="5dp"
-                        android:paddingEnd="5dp"/>
+                        android:paddingBottom="5dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                                 android:layout_height="match_parent"
                                 android:gravity="bottom"
                                 android:textSize="14sp"
-                                android:textStyle="bold"/>
+                                android:textStyle="bold" />
 
                             <RatingBar
                                 android:id="@+id/ad_stars"
@@ -101,15 +101,15 @@
                         android:id="@+id/ad_body"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
                         android:layout_marginEnd="20dp"
+                        android:layout_marginRight="20dp"
                         android:textSize="12sp" />
 
                     <com.google.android.gms.ads.formats.MediaView
                         android:id="@+id/ad_media"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
                         android:layout_gravity="center_horizontal"
-                        android:layout_width="250dp"
-                        android:layout_height="175dp"
                         android:layout_marginTop="5dp" />
 
                     <LinearLayout
@@ -117,27 +117,27 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="end"
                         android:orientation="horizontal"
-                        android:paddingBottom="10dp"
-                        android:paddingTop="10dp">
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp">
 
                         <TextView
                             android:id="@+id/ad_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingLeft="5dp"
                             android:paddingStart="5dp"
-                            android:paddingRight="5dp"
+                            android:paddingLeft="5dp"
                             android:paddingEnd="5dp"
+                            android:paddingRight="5dp"
                             android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/ad_store"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingLeft="5dp"
                             android:paddingStart="5dp"
-                            android:paddingRight="5dp"
+                            android:paddingLeft="5dp"
                             android:paddingEnd="5dp"
+                            android:paddingRight="5dp"
                             android:textSize="12sp" />
 
                         <Button
