--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_above="@+id/ll_view"
+        android:layout_alignStart="@+id/imageView"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignEnd="@+id/ll_view"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
+        android:fontFamily="@font/karla_bold"
+        android:gravity="center|start"
+        android:padding="5dp"
+        android:text="@string/welcome"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="?attr/colorAccent"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_above="@+id/ll_view"
+        android:layout_alignStart="@+id/ll_view"
+        android:layout_alignEnd="@+id/ll_view"
+        android:layout_marginEnd="272dp"
+        app:srcCompat="@drawable/ic_feedly" />
 
     <LinearLayout
         android:id="@+id/ll_view"
@@ -78,11 +109,11 @@
         android:id="@+id/skip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/ll_view"
+        android:layout_centerInParent="true"
         android:gravity="center|end"
         android:padding="20sp"
-        android:layout_below="@+id/ll_view"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_centerInParent="true"
-        android:text="Skip Login >>" />
+        android:text="@string/skip_login"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
 </RelativeLayout>
